Translators as stateless services producing immutable TranslatedXyz records
        * EJBQL translators